プログレス

--- a/googleOSD/googleOSD/googleOSD/GoogleAuth.xaml
+++ b/googleOSD/googleOSD/googleOSD/GoogleAuth.xaml
@@ -4,7 +4,8 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:GoogleOSD"
-        mc:Ignorable="d"
+    	WindowStartupLocation="CenterScreen" 
+		mc:Ignorable="d"
         Title="Google認証"  FontSize="12"  Height="300" Width="512">
 
 	<Window.Resources>
