--- a/googleOSD/googleOSD/googleOSD/ProgressDialog.xaml
+++ b/googleOSD/googleOSD/googleOSD/ProgressDialog.xaml
@@ -3,15 +3,29 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:GoogleOSD"
+		xmlns:local="clr-namespace:GoogleOSD"
         mc:Ignorable="d"
-        Title="ProgressDialog" Height="150" Width="400">
-	<Grid>
-		<Image HorizontalAlignment="Left" Height="100" Margin="10,10,0,0" VerticalAlignment="Top" Width="100"
-					x:Name="Progress_img" Source="Resources/DarsBar.gif"
+ 	    WindowStartupLocation="CenterScreen" 
+       Title="ProgressDialog" Width="400" Height="150"
+	   >
+	<Grid Cursor="ScrollAll">
+		<Grid.ColumnDefinitions>
+			<ColumnDefinition  Width="Auto"  />
+			<ColumnDefinition  />
+		</Grid.ColumnDefinitions>
+		<Grid.RowDefinitions >
+			<RowDefinition Height="Auto"/>
+			<RowDefinition x:Name="titol_row" Height="Auto" />
+			<RowDefinition  Height="Auto"/>
+		</Grid.RowDefinitions>
+		<!--<ProgressBar Grid.Row="0" Grid.Column="0"   Height="100" Width="100" Margin="10"/>-->
+		<Image  Grid.Row="0" Grid.Column="0"   Height="100" Width="100" Margin="10"
+					x:Name="Progress_img" Source="Resources/DarsBar.gif" Focusable="True"
 			/>
-		<TextBlock HorizontalAlignment="Left" Margin="115,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="100" Width="267" 
-			Text="処理中です。　しばらくお待ちください。" x:Name="Progress_msg_tb"
+
+		<Label x:Name="Progress_msg_tb" 
+			Content="処理中です。しばらくお待ちください。" 
+			Grid.Row="0" Grid.Column="1"  Margin="10,10,0,0"
 		/>
 	</Grid>
 </Window>
