--- a/googleOSD/googleOSD/googleOSD/ProgressDialog.xaml
+++ b/googleOSD/googleOSD/googleOSD/ProgressDialog.xaml
@@ -3,26 +3,23 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-		xmlns:local="clr-namespace:GoogleOSD"
+	 xmlns:wf="clr-namespace:System.Windows.Forms;assembly=System.Windows.Forms" 
+	 xmlns:local="clr-namespace:GoogleOSD"
         mc:Ignorable="d"
  	    WindowStartupLocation="CenterScreen" 
-       Title="ProgressDialog" Width="400" Height="150"
+       Title="ProgressDialog" Width="400" Height="140" Loaded="Window_Loaded"
 	   >
 	<Grid Cursor="ScrollAll">
 		<Grid.ColumnDefinitions>
-			<ColumnDefinition  Width="Auto"  />
+			<ColumnDefinition   Width="100"/>
 			<ColumnDefinition  />
 		</Grid.ColumnDefinitions>
 		<Grid.RowDefinitions >
-			<RowDefinition Height="Auto"/>
-			<RowDefinition x:Name="titol_row" Height="Auto" />
-			<RowDefinition  Height="Auto"/>
+			<RowDefinition Height="100"/>
 		</Grid.RowDefinitions>
-		<!--<ProgressBar Grid.Row="0" Grid.Column="0"   Height="100" Width="100" Margin="10"/>-->
-		<Image  Grid.Row="0" Grid.Column="0"   Height="100" Width="100" Margin="10"
-					x:Name="Progress_img" Source="Resources/DarsBar.gif" Focusable="True"
-			/>
-
+		<WindowsFormsHost  Grid.Row="0" Grid.Column="0"    Margin="10,10,0,0">
+			<wf:PictureBox x:Name="pictureBox1" />
+		</WindowsFormsHost>
 		<Label x:Name="Progress_msg_tb" 
 			Content="処理中です。しばらくお待ちください。" 
 			Grid.Row="0" Grid.Column="1"  Margin="10,10,0,0"
