--- a/googleOSD/googleOSD/googleOSD/GEventEdit.xaml
+++ b/googleOSD/googleOSD/googleOSD/GEventEdit.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         Title="イベント登録"  FontSize="12" 
 		ScrollViewer.HorizontalScrollBarVisibility="Auto" ScrollViewer.VerticalScrollBarVisibility="Auto" 
-	    WindowStartupLocation="CenterScreen" 
+	    WindowStartupLocation="CenterScreen"  Topmost="True"
 		Width="620" Height="650"
 		Closing="Window_Closing" >
 
