--- a/googleOSD/googleOSD/googleOSD/ProgressDialog.xaml
+++ b/googleOSD/googleOSD/googleOSD/ProgressDialog.xaml
@@ -3,26 +3,26 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-	 xmlns:wf="clr-namespace:System.Windows.Forms;assembly=System.Windows.Forms" 
-	 xmlns:local="clr-namespace:GoogleOSD"
+		xmlns:local="clr-namespace:GoogleOSD"
         mc:Ignorable="d"
- 	    WindowStartupLocation="CenterScreen" 
-       Title="ProgressDialog" Width="400" Height="140" Loaded="Window_Loaded"
+ 	    WindowStartupLocation="CenterScreen"  Topmost="True"
+       Title="ProgressDialog" Width="500" Height="140" 
 	   >
-	<Grid Cursor="ScrollAll">
+
+	<Grid>
 		<Grid.ColumnDefinitions>
-			<ColumnDefinition   Width="100"/>
+			<ColumnDefinition  Width="Auto"/>
+			<ColumnDefinition  Width="Auto"/>
 			<ColumnDefinition  />
 		</Grid.ColumnDefinitions>
 		<Grid.RowDefinitions >
 			<RowDefinition Height="100"/>
 		</Grid.RowDefinitions>
-		<WindowsFormsHost  Grid.Row="0" Grid.Column="0"    Margin="10,10,0,0">
-			<wf:PictureBox x:Name="pictureBox1" />
-		</WindowsFormsHost>
+		<local:WaitingCircle  Grid.Row="0" Grid.Column="0"    Margin="10,10,0,0" Width="100" />
+		<!--<local:AnimeGifView Grid.Row="0" Grid.Column="1" Margin="10,10,0,0" Width="100" />-->
 		<Label x:Name="Progress_msg_tb" 
 			Content="処理中です。しばらくお待ちください。" 
-			Grid.Row="0" Grid.Column="1"  Margin="10,10,0,0"
+			Grid.Row="0" Grid.Column="2"  Margin="10,10,0,0"
 		/>
 	</Grid>
 </Window>
