--- a/googleOSD/googleOSD/googleOSD/GoogleAuth.xaml
+++ b/googleOSD/googleOSD/googleOSD/GoogleAuth.xaml
@@ -107,9 +107,13 @@
 				--><!--<TextBlock x:Name="textBlockSelected" />--><!--
 			</StackPanel>
 		</GroupBox>
-		<StackPanel Orientation="Horizontal"  Grid.Row="4" Grid.Column="2"  >
+		-->
+
+		<!--<StackPanel Orientation="Horizontal"  Grid.Row="4" Grid.Column="2"  >
 			<cont:WaitingCircle  Grid.Row="0" Grid.Column="0"    Margin="10,0,0,0" Width="50" />
-			--><!--<cont:AnimeGifView  Margin="10,0,0,0" Width="50" />--><!--
 		</StackPanel>-->
+
+		<!--<cont:AnimeGifView  Margin="10,0,0,0" Width="50" />-->
+
 	</Grid>
 </Window>
