--- a/0000/AnimeGifView.xaml
+++ b/0000/AnimeGifView.xaml
@@ -1,4 +1,4 @@
-<UserControl x:Class="GoogleOSD.Controls.AnimeGifView"
+﻿<UserControl x:Class="GoogleOSD.Controls.AnimeGifView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
