--- a/googleOSD/googleOSD/googleOSD/ProjectModel.tt
+++ b/googleOSD/googleOSD/googleOSD/ProjectModel.tt
@@ -428,7 +428,7 @@ public class CodeStringGenerator
                 "{0}using System;{1}" +
                 "{2}",
                 inHeader ? Environment.NewLine : "",
-                includeCollections ? (Environment.NewLine + "using System.Collections.Generic;") : "",
+                includeCollections ? (Environment.NewLine + "using System.Collections.ObjectModel;") : "",
                 inHeader ? "" : Environment.NewLine)
             : "";
     }
